tests/NormalTests/paczka1/fuzzy1/69042994.err
Error in line 3: qVJUf7wKce A724 5,3
Error in line 4: qVJUf7wKce A763 98,9
Error in line 6: qVJUf7wKce A936 34,5
Error in line 15: WvAg A724 62,3
Error in line 19: NLdnafmQ A936 94,8
Error in line 26: h89n0cKFqI A724 85,85
Error in line 25: M3ul1lMP A592 74,3
Error in line 33: M3ul1lMP A763 44,0
Error in line 35: M3ul1lMP A936 6,0
